--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
-!**/src/test/**/target/
+*.class
 
 ### STS ###
 .apt_generated
