--- a/community/pom.xml
+++ b/community/pom.xml
@@ -15,6 +15,7 @@
     <properties>
         <java.version>1.8</java.version>
     </properties>
+    <packaging>jar</packaging>
     <dependencies>
 
         <dependency>
@@ -79,20 +80,19 @@
     </dependencies>
 
     <build>
+
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
-                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
-            
         </plugins>
     </build>
 
